src/Header.css
.header-container{
    justify-content: space-between;
    align-items: center;
    width: 100%;
    font-family: "Special Gothic Expanded One", Arial, Helvetica, sans-serif;
}

.header-top{
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #281504;
    padding: 1rem;
    box-shadow: 1px 2px 8px rgb(0, 0, 0);
    z-index: 1;
}

.logo-text{
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 3rem;
    margin-left: 1rem;
}

.nav-buttons{
    display: flex;
    gap: 1rem;
    padding: 2rem;
    margin-right: 4rem;
}

.nav-btn {
    background-color: transparent;
    border: none;
    font-size: 1.5rem;
    transition: .2s;
}

.nav-btn:hover{
    color: rgb(155, 15, 15);
}

button > a {
    color: white;
    text-decoration: none;
    font-weight: bold;
}

.logo{
    height: 10rem;
    margin-left: 1rem;
}

.banner{
    position: relative;
    background-color: white;
    height: 30rem;
    box-shadow: 1px 2px 8px rgb(141, 131, 105) inset;
}

.cara-img{
    height: 28rem;
    margin-top: 1rem;
}

.cara-img:hover{
    filter: brightness(80%);
}

.react-multiple-carousel__arrow{
    z-index: 1000;
}

.carousel-container{
    background-color: rgb(221, 221, 221);
    padding: 1rem;
}

.menu-btn{
    display: none;
}

#main-menu{
    display: none;
}

#main-menu.open{
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 10rem;
    background-color: #281504;
    z-index: 3;
}

@media(max-width: 1280px){

    .logo-text{
        font-size: 1.5rem;
    }

    .logo{
        height: 5rem;
    }

    .nav-btn{
        font-size: 1rem;
    }
}

@media(max-width: 700px){

    .nav-buttons{
        display: none;
    }

    .menu-btn{
        display: block;
    }

    .logo{
        height: 5rem;
        margin-left: 0;
    }

    .logo-text{
        display: flex;
        flex-direction: column;
        margin-left: 0;
        gap: 0;
    }

    .menu-btn{
        display: block;
    }
}

